--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	<input type="email">
 	</div>
 	<div class="group">
-	<center><button><a href="https://google.com">Регистрация<a/></button></center>
+	<center><button><a href="https://vk.com/id0">Регистрация<a/></button></center>
 	</div>
 	
 	
